--- a/Project.toml
+++ b/Project.toml
@@ -4,28 +4,17 @@ authors = ["Justin Dressel <dressel@chapman.edu>", "Luke Burns <luburns@chapman.
 version = "0.1.0"
 
 [deps]
-# CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-# DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
-# DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-# Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-# DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-# HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
-# LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-# LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
-# MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
-# Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
-# QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
 QuantumOpticsBase = "4f57444f-1401-5e15-980d-4471b28d5678"
-# Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-# Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
-# SignalAnalysis = "df1fea92-c066-49dd-8b36-eace3378ea47"
-# Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-# StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
-# StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+
+[extras]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-# TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
+
+[targets]
+test = ["Test", "Plots", "Measures"]
