--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,12 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QuantumOpticsBase = "4f57444f-1401-5e15-980d-4471b28d5678"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [extras]
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 
 [targets]
 test = ["Test", "Plots", "Measures"]
